--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div class="isola-bella-image-grid">
   <div class="isola-bella-image-item" data-aos="fade-up">
-    <img src="img.jpg" alt="Fauna dell'Isola Bella" class="isola-bella-image" onclick="openImage(this)">
+    <img src="imgg.jpg" alt="Fauna dell'Isola Bella" class="isola-bella-image" onclick="openImage(this)">
   </div>
 
   <div class="isola-bella-image-item" data-aos="fade-up" data-aos-delay="100">
